# crystal-clear

./: .gitignore  README.md  ethereum__traces__19917298_to_19917298.json  index.html  template.html
.github/workflows/: ci.yml  scsc_tests.yml
data/: alive_contracts_year.csv
data/raw/: contracts_per_tx_2017.csv  contracts_per_tx_2020.csv  contracts_per_tx_2021.csv  contracts_per_tx_year.csv  create_by_year.csv  dependencies_year.csv  (+2 more)
notebooks/: plot_contract_stats.ipynb  pyproject.toml
poc/: README.md  call_tree.py  config.py  requirements.txt  scsc.py
scsc/: .pre-commit-config.yaml  README.md  call_tree.py  contract_graph_template.html  generate_bubble.py  main.py  pyproject.toml  scsc.py  traces.dot
scsc/cli/: app.py  cli.py
scsc/evm_trace/: parity.py
scsc/scsc/: __init__.py  app.py  call_graph.py  cli.py  main.py  supply_chain.py  trace_collector.py
scsc/scsc/graph/: __init__.py  call_graph.py
scsc/scsc/metadata/: __init__.py  base_provider.py  ens_provider.py
scsc/scsc/traces/: __init__.py  trace_collector.py
scsc/tests/: test_call_graph.py  test_trace_collector.py
scsc/tests/graph/: test_call_graph.py
scsc/tests/traces/: test_trace_collector.py
scsc/try_exp/: 0x3451B6b219478037a1AC572706627FC2BDa1e812_21059800_2024_10_27_22_18_51.json
webapp/: README.md  docker-compose.yml
webapp/backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
webapp/backend/core/: config.py  database.py  exceptions.py  logging.py  metadata.py
webapp/backend/crud/: deployment.py  label.py
webapp/backend/models/: deployment.py  label.py
webapp/backend/routers/: analysis.py  health.py  info.py
webapp/backend/schemas/: analysis.py  info.py
webapp/backend/services/: analysis_service.py  info_service.py
(+105 files in other folders)
