[project]
name = "scsc"
version = "0.1.0"
description = ""
authors = [
    {name = "Monica Jin",email = "monicachenjin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "web3[tester] (>=7.8.0,<8.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pydot (>=3.0.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
