[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Monica Jin",email = "monicachenjin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "scsc (>=0.1.0,<0.2.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "h11 (>=0.16.0,<0.17.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
select = ["E", "F", "W", "I", "B"]
ignore = ["E203", "E266", "E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
